Bug 874154.  Make sure we don't end up with uninitialized JSObject* or JS::Value in dictionaries.  r=ms2ger